package org.java10.examples.mixin;

@FunctionalInterface
public interface Vehicle {

    static void create() {}

    void op();

}
