@startuml

interface Vehicle {
void op()
.. default ..
void create()
}

interface Navigable {
.. default ..
#void starboard()
#void port()
#void sail()
#void anchorUp()
#void anchorDown()
}

interface Flyer {
.. default ..
#void takeOff()
#void land()
#void fly()
}

object seaplane

Vehicle <|-- Navigable
Vehicle <|-- Flyer

seaplane <|-- Navigable
seaplane <|-- Flyer

@enduml
